--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="test">
-  <h1>home works!</h1>
-  <p>add two row in Home</p>
+  <h1>This is Component test Home</h1>
+  <p>
+    add something... <b>{{ name }}</b>
+  </p>
 </div>
