--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,23 +4,23 @@
   box-shadow: 2px 5px purple;
   width: 500px;
 }
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
+
+.table,
+td,
+th {
+  border-collapse: collapse;
+  border: 1px solid #333;
 }
 
-input[type="text"] {
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  width: 100%;
-  box-sizing: border-box;
+td,
+th {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 150px;
 }
 
-input[type="text"]:focus {
-  outline: none;
-  border-color: #6ea1ff;
-  box-shadow: 0 0 5px #6ea1ff;
+.combo-box {
+  display: flex;
+  justify-content: space-evenly;
 }
