--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,24 @@
-<h1>Hello world!</h1>
-<h2>Nice to see everyones!</h2>
-<h3>Welcome to the my website!</h3>
-<app-home></app-home>
+<h1>Welcome Angular Router App</h1>
+<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
+<nav>
+  <ul>
+    <li>
+      <a
+        routerLink="/about"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >About Component</a
+      >
+    </li>
+    <li>
+      <a
+        routerLink="/home"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Home Component</a
+      >
+    </li>
+  </ul>
+</nav>
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
