--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="image-container">
   <img
-    src="https://scontent.fhan15-1.fna.fbcdn.net/v/t39.30808-6/340568869_735580934898008_3325682886070963402_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=GtkAjvZ_juAAX8SvKOS&_nc_ht=scontent.fhan15-1.fna&oh=00_AfCySJ2PZulFASmvex1tYpNXgAQHI8WVCxLcuB7fasDwGw&oe=643ADCE7"
+    src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t39.30808-6/340640184_3471150303125260_2951099631877387897_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=0debeb&_nc_ohc=82qNNBdFkqIAX_YOnp4&_nc_ht=scontent.fsgn2-3.fna&oh=00_AfA2C1dCXt-Y26z3D70-xwMTowH3Oe62aGyyylPwSLdDuQ&oe=644090A9"
     alt="Your Image"
   />
   <div class="overlay"></div>
