--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,9 @@
-<div class="image-container">
-  <img
-    src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t39.30808-6/340640184_3471150303125260_2951099631877387897_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=0debeb&_nc_ohc=82qNNBdFkqIAX_YOnp4&_nc_ht=scontent.fsgn2-3.fna&oh=00_AfA2C1dCXt-Y26z3D70-xwMTowH3Oe62aGyyylPwSLdDuQ&oe=644090A9"
-    alt="Your Image"
-  />
-  <div class="overlay"></div>
-</div>
+<p>Example: ngSwitch Angular 12</p>
+<ul [ngSwitch]="loginName">
+  <li *ngSwitchCase="'user'"><p>User is logged in...</p></li>
+  <li *ngSwitchCase="'admin'">
+    <p>Admin is logged in...</p>
+    <app-home></app-home>
+  </li>
+  <li *ngSwitchDefault><p>Please choose login name.</p></li>
+</ul>
